2002/04/20 niteria
- Fixed Bug 89 (old list): Problems with MRUList used in 'Find in Files' dialog.
- Fixed Bug 114 (old list): StructureParser did not find files,
  if they resided above the project directory.
- Fixed Bug 546403: TeX-Output: Empty FileStack while TeX still runs.
- Used CBrowseButton in FindInFiles-Dialog.
- Fixed Bug 546400: FolderSelect-Dialog does not jump to directory
  Will be done by CBrowseButton now by default (gets the dir from the text
  in the attached EditControl or given in constructor).

2002/04/18 niteria
- Added new collection class to MFCExt called CUniqueStringList, which does not
  add an item, if it is already in the list. Has some advandced features as well.
- Added internal support for Placeholder sets (set of filesnames
  defined by a placeholder). Have a look at placeholder.h to read, what it does.
  External support (to the user) is still pending.
- A UserTool invokes now with CreateProcess via CProcess. This offers the commandline
  to be longer than before. Usefull together with Placeholder sets.
- Feature 536162: Clear All Command implemented. This one needs the new placeholder sets.
- Fixed small sorting problem in SortArray::InsertSorted

2002/04/11 niteria
- Translation of the spell checker resources.
- Fixed Bug 82 (old list): Problems with jumping to the error/warning source line.
- Fixed Bug 542550: Bad boxes for alignments are not catched.
- Fixed Bug 542552: Package warnings are not catched.
- Fixed Bug 542555: pdftex: Reporting but not jumping to errors/warnings/bad boxes.

2002/04/10 niteria
- Fixed Bug 541810: First Chance Exception in COutputBuilder::RunPostProcessors.
  Came up because of closing a handle in CPostProcessor::Execute,
  which was created in RunPostProcessors.

2002/04/08 cnorris
- Implemented basic spell checker functionality. The spell checker is based
on the MySpell library, which is the same implementation used by Mozilla and